--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "rb-service",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://atorami.github.io/rb-service",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "framer-motion": "^12.4.7",
+    "github-pages": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
